# merge-files

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  reference.md  usage.md
src/merge_files/: __init__.py  __main__.py  constants.py  files.py  programming_languages.py
src/merge_files/text/: constants.py  models.py  utils.py
src/merge_files_cli/: __main__.py  utils.py
tests/: __init__.py  conftest.py  test_main.py
tests/test_merge_files/: conftest.py  constants.py  utils.py
tests/test_merge_files/resources/: tpl.file.jsonl  tpl.file.py  tpl.file.pyi  tpl.file.txt  tpl.no-blanks.file.jsonl  tpl.no-blanks.file.py  tpl.no-blanks.file.pyi  tpl.no-blanks.file.txt  tpl.no-blanks.file.yaml
tests/test_merge_files/test_files/: test_merge.py
tests/test_merge_files/test_text/: test_check_unbalanced_triple_quotes.py
tests/test_merge_files_cli/: conftest.py
tests/test_merge_files_cli/test_main/: test_merge_files.py
