[tool.poetry]
name = "merge-files"
version = "1.1.0"
description = "Merge Files"
authors = ["Nikita Shupeyko <webyneter@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/webyneter/merge-files"
repository = "https://github.com/webyneter/merge-files"
documentation = "https://merge-files.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]
packages = [
    {include = "merge_files", from = "src"},
    {include = "merge_files_cli", from = "src"},
]

[tool.poetry.urls]
Changelog = "https://github.com/webyneter/merge-files/releases"

[tool.poetry.dependencies]
python = "^3.11"
click = ">=8.0.1"
aiofiles = "^23.2.1"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.2"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
merge-files = "merge_files_cli.__main__:merge_files"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["merge_files", "tests"]

[tool.coverage.report]
show_missing = true
#fail_under = 100

[tool.ruff]
# https://docs.astral.sh/ruff/settings/#fix
fix = true
# https://docs.astral.sh/ruff/settings/#line-length
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = "--verbose --cov"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
